--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,24 @@ button {
   border: 1px solid black;
   margin: 10px;
 }
+button:hover {
+  background-color: gray;
+  color: white;
+  cursor: pointer;
+}
+#rainbow:focus,
+#color:focus,
+#eraser:focus {
+  background-color: black;
+  color: white;
+}
 #color_picker {
-  padding: 10px;
-  width: 50%;
-  height: 50px;
+  border: none;
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+  outline: none;
+  border-radius: 50 px;
 }
 #size {
   padding: 8px;
